[gd_scene load_steps=28 format=4 uid="uid://j5h15vyfs70h"]

[ext_resource type="Script" path="res://Levels/Level1/level_1.gd" id="1_miyva"]
[ext_resource type="Texture2D" uid="uid://bnkf66xv2cxwh" path="res://Assets/tiles.png" id="1_udatx"]
[ext_resource type="PackedScene" uid="uid://cfr6qswehxila" path="res://hud.tscn" id="2_0l11b"]
[ext_resource type="FontFile" uid="uid://ldri87twec1q" path="res://Assets/Enchanted Land.otf" id="2_w5en7"]
[ext_resource type="Script" path="res://towers.gd" id="4_4eu5u"]
[ext_resource type="Script" path="res://Levels/Level1/grid_system.gd" id="4_5uoc8"]
[ext_resource type="Script" path="res://Levels/Level1/health.gd" id="4_u3k87"]
[ext_resource type="Script" path="res://Levels/Level1/enemy_spawner.gd" id="7_pm7op"]
[ext_resource type="PackedScene" uid="uid://dbu0hoxltohim" path="res://views/slime_view.tscn" id="9_v7guq"]

[sub_resource type="LabelSettings" id="LabelSettings_bgc6j"]
font = ExtResource("2_w5en7")
font_size = 32
font_color = Color(0.776471, 0.247059, 0.141176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_up66c"]
font = ExtResource("2_w5en7")
font_size = 32
font_color = Color(0.776471, 0.627451, 0.141176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pvu41"]
font = ExtResource("2_w5en7")
font_size = 32
font_color = Color(1, 1, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eftm6"]
texture = ExtResource("1_udatx")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
0:22/0 = 0
1:22/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:16/0 = 0
1:16/0 = 0
1:17/0 = 0
0:17/0 = 0
0:18/0 = 0
1:18/0 = 0
1:19/0 = 0
0:19/0 = 0
0:20/0 = 0
1:20/0 = 0
1:21/0 = 0
0:21/0 = 0
10:19/0 = 0
14:19/0 = 0
15:19/0 = 0

[sub_resource type="TileSet" id="TileSet_w7e0w"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_eftm6")

[sub_resource type="Curve2D" id="Curve2D_e6ewd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -144, -312, 0, 0, 0, 0, -146, -143, 0, 0, 0, 0, 176, -144, 0, 0, 0, 0, 176, -80, 0, 0, 0, 0, -144, -80, 0, 0, 0, 0, -146, 17, 0, 0, 0, 0, -79, 17, 0, 0, 0, 0, -80, 80, 0, 0, 0, 0, 16, 80, 0, 0, 0, 0, 16, 16, 0, 0, 0, 0, 175, 15, 0, 0, 0, 0, 176, 303)
}
point_count = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q8qw"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tegvk"]
size = Vector2(32, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rlus"]
size = Vector2(32, 288)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2x5b"]
size = Vector2(128, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybqqw"]
size = Vector2(32, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqtj7"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsyee"]
size = Vector2(32, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yngv"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3hwx"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ot3i"]
size = Vector2(288, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ph86"]
size = Vector2(288, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xw783"]
size = Vector2(32, 96)

[node name="Level_1" type="Node2D"]
z_index = -1
script = ExtResource("1_miyva")

[node name="HUD" parent="." instance=ExtResource("2_0l11b")]

[node name="Health" type="Label" parent="."]
offset_left = -608.0
offset_top = -323.0
offset_right = -418.0
offset_bottom = -285.0
text = "HEALTH:"
label_settings = SubResource("LabelSettings_bgc6j")
script = ExtResource("4_u3k87")

[node name="Gold" type="Label" parent="."]
offset_left = -607.0
offset_top = -285.0
offset_right = -415.0
offset_bottom = -247.0
text = "GOLD:"
label_settings = SubResource("LabelSettings_up66c")

[node name="WaveTime" type="Label" parent="."]
offset_left = -607.0
offset_top = -246.0
offset_right = -458.0
offset_bottom = -208.0
text = "WAVE: "
label_settings = SubResource("LabelSettings_pvu41")

[node name="NextWave" type="Button" parent="."]
offset_left = -606.0
offset_top = 214.0
offset_right = -371.0
offset_bottom = 318.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_pressed_color = Color(0.776471, 0.627451, 0.141176, 1)
theme_override_colors/font_hover_color = Color(0.776471, 0.627451, 0.141176, 1)
theme_override_fonts/font = ExtResource("2_w5en7")
theme_override_font_sizes/font_size = 64
text = "Next Wave"

[node name="Slimes" type="Node2D" parent="."]

[node name="Level_map" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAD9////AAAAAA0AAAD9//3/AAAAAAUAAAD9//v/AAAAAAUAAAD9//n/AAAAAA0AAAD9//f/AAAAAA0AAAD///f/AAACAA4AAAD///n/AAADAA0AAAD///v/AAAAAAUAAAD///3/AAAAAAUAAAD/////AAAAAA0AAAABAPb/AAAAAA0AAAABAPf/AAADAA4AAAABAPj/AAADAA0AAAABAPn/AAADAA4AAAABAPr/AAAAAA0AAAABAPv/AAAAAAUAAAABAPz/AAAAAA0AAAABAP3/AAAAAAUAAAABAP7/AAAAAA0AAAABAP//AAAAAA0AAAACAPb/AAAAAA0AAAACAPf/AAAAAA0AAAACAPj/AAAAAA0AAAACAPn/AAAAAA0AAAACAPr/AAAAAA0AAAACAPv/AAAAAAUAAAACAPz/AAAAAA0AAAACAP3/AAAAAAUAAAACAP7/AAAAAA0AAAACAP//AAAAAA0AAAADAPb/AAACAA4AAAADAPf/AAAAAA0AAAADAPj/AAADAA0AAAADAPn/AAAAAA0AAAADAPr/AAAAAA0AAAADAPv/AAAAAAUAAAADAPz/AAAAAA0AAAADAP3/AAAAAAUAAAADAP7/AAAAAA0AAAADAP//AAAAAA0AAAAEAPb/AAAAAA0AAAAEAPf/AAAAAA0AAAAEAPj/AAAAAA0AAAAEAPn/AAACAA4AAAAEAPr/AAAAAA0AAAAEAPv/AAAAAAUAAAAEAPz/AAAAAA0AAAAEAP3/AAAAAAUAAAAEAP7/AAAAAA0AAAAEAP//AAAAAA0AAAAFAPb/AAAAAA0AAAAFAPf/AAAAAA0AAAAFAPj/AAAAAA0AAAAFAPn/AAAAAA0AAAAFAPr/AAAAAA0AAAAFAPv/AAAAAAUAAAAFAPz/AAAAAAUAAAAFAP3/AAAAAAUAAAAFAP7/AAAAAA0AAAAFAP//AAAAAA0AAAAGAPb/AAAAAA0AAAAGAPf/AAACAA4AAAAGAPj/AAAAAA0AAAAGAPn/AAAAAA0AAAAGAPr/AAAAAA0AAAAGAPv/AAAAAA0AAAAGAPz/AAAAAA0AAAAGAP3/AAAAAA0AAAAGAP7/AAAAAA0AAAAGAP//AAAAAA0AAAAHAPb/AAAAAA0AAAAHAPf/AAAAAA0AAAAHAPj/AAAAAA0AAAAHAPn/AAAAAA0AAAAHAPr/AAAAAA0AAAAHAPv/AAAAAA0AAAAHAPz/AAAAAA0AAAAHAP3/AAADAA0AAAAHAP7/AAAAAA0AAAAHAP//AAAAAA0AAAAIAPb/AAAAAA0AAAAIAPf/AAAAAA0AAAAIAPj/AAAAAA0AAAAIAPn/AAAAAA0AAAAIAPr/AAACAA4AAAAIAPv/AAAAAA0AAAAIAPz/AAAAAA0AAAAIAP3/AAAAAA0AAAAIAP7/AAAAAA0AAAAIAP//AAAAAA0AAAAJAPb/AAAAAA0AAAAJAPf/AAAAAA0AAAAJAPj/AAAAAA0AAAAJAPn/AAAAAA0AAAAJAPr/AAAAAA0AAAAJAPv/AAAAAA0AAAAJAPz/AAAAAA0AAAAJAP3/AAADAA0AAAAJAP7/AAAAAA0AAAAJAP//AAAAAA0AAAAKAPb/AAAAAA0AAAAKAPf/AAAAAA0AAAAKAPj/AAAAAA0AAAAKAPn/AAADAA0AAAAKAPr/AAAAAA0AAAAKAPv/AAAAAA0AAAAKAPz/AAAAAA0AAAAKAP3/AAAAAA0AAAAKAP7/AAAAAA0AAAAKAP//AAADAA0AAAALAPb/AAADAA0AAAALAPf/AAAAAA0AAAALAPj/AAAAAA0AAAALAPn/AAAAAA0AAAALAPr/AAAAAA0AAAALAPv/AAAAAA0AAAALAPz/AAAAAA0AAAALAP3/AAAAAA0AAAALAP7/AAAAAA0AAAALAP//AAAAAA0AAAAMAPb/AAAAAA0AAAAMAPf/AAAAAA0AAAAMAPj/AAAAAA0AAAAMAPn/AAAAAA0AAAAMAPr/AAADAA0AAAAMAPv/AAAAAA0AAAAMAPz/AAAAAA0AAAAMAP3/AAAAAA0AAAAMAP7/AAAAAA0AAAAMAP//AAADAA0AAAANAPb/AAAAAA0AAAANAPf/AAAAAA0AAAANAPj/AAAAAA0AAAANAPn/AAAAAA0AAAANAPr/AAAAAA0AAAANAPv/AAAAAA0AAAANAPz/AAAAAA0AAAANAP3/AAAAAA0AAAANAP7/AAAAAA0AAAANAP//AAAAAA0AAAD7/wMAAAAAAA0AAAD8/wMAAAAAAA0AAAD9/wMAAAAAAA0AAAD+/wMAAAAAAA0AAAD//wMAAAAAAA0AAAAAAAMAAAAAAA0AAAABAAMAAAAAAA0AAAACAAMAAAACAA4AAAADAAMAAAAAAA0AAAAEAAMAAAAAAA0AAAAFAAMAAAAAAAUAAAAGAAMAAAAAAA0AAAAHAAMAAAAAAA0AAAAIAAMAAAAAAA0AAAAJAAMAAAAAAA0AAAAKAAMAAAAAAA0AAAALAAMAAAAAAA0AAAD9/wcAAAAAAA0AAAD+/wcAAAAAAA0AAAD//wcAAAAAAA0AAAAAAAcAAAAAAA0AAAABAAcAAAAAAA0AAAACAAcAAAACAA4AAAADAAcAAAAAAA0AAAAEAAcAAAAAAA0AAAAFAAcAAAAAAAUAAAAGAAcAAAAAAA0AAAAHAAcAAAAAAA0AAAAIAAcAAAADAA0AAAAJAAcAAAACAA4AAAAKAAcAAAAAAA0AAAALAAcAAAAAAA0AAAAMAAcAAAAAAA0AAAANAAcAAAAAAA0AAAD1//b/AAAAAA0AAAD1//f/AAAAAA0AAAD1//j/AAAAAA0AAAD1//n/AAAAAA0AAAD1//r/AAADAA0AAAD1//v/AAAAAA0AAAD1//z/AAAAAA0AAAD1//3/AAAAAA0AAAD1//7/AAAAAA0AAAD1////AAAAAA0AAAD1/wAAAAAAAA0AAAD1/wEAAAAAAA0AAAD1/wIAAAAAAA0AAAD1/wMAAAAAAA0AAAD1/wQAAAAAAA0AAAD1/wUAAAAAAA0AAAD1/wYAAAAAAA0AAAD1/wcAAAAAAA0AAAD2//b/AAAAAA0AAAD2//f/AAAAAA0AAAD2//j/AAAAAA0AAAD2//n/AAAAAA0AAAD2//r/AAAAAA0AAAD2//v/AAAAAA0AAAD2//z/AAADAA0AAAD2//3/AAAAAA0AAAD2//7/AAACAA4AAAD2////AAAAAA0AAAD2/wAAAAAAAA0AAAD2/wEAAAACAA4AAAD2/wIAAAAAAA0AAAD2/wMAAAAAAA0AAAD2/wQAAAADAA0AAAD2/wUAAAAAAA0AAAD2/wYAAAACAA4AAAD2/wcAAAAAAA0AAAD3//b/AAAAAA0AAAD3//f/AAACAA4AAAD3//j/AAAAAA0AAAD3//n/AAADAA0AAAD3//r/AAACAA4AAAD3//v/AAAAAA0AAAD3//z/AAAAAA0AAAD3//3/AAACAA4AAAD3//7/AAAAAA0AAAD3////AAAAAA0AAAD3/wAAAAACAA4AAAD3/wEAAAAAAA0AAAD3/wIAAAAAAA0AAAD3/wMAAAACAA4AAAD3/wQAAAAAAA0AAAD3/wUAAAAAAA0AAAD3/wYAAAADAA0AAAD3/wcAAAAAAA0AAAD4//b/AAAAAA0AAAD4//f/AAAAAA0AAAD4//j/AAAAAA0AAAD4//n/AAAAAA0AAAD4//r/AAAAAA0AAAD4//v/AAAAAA0AAAD4//z/AAAAAA0AAAD4//3/AAACAA4AAAD4//7/AAAAAA0AAAD4////AAAAAA0AAAD4/wAAAAAAAA0AAAD4/wEAAAAAAA0AAAD4/wIAAAAAAA0AAAD4/wMAAAAAAA0AAAD4/wQAAAAAAA0AAAD4/wUAAAADAA0AAAD4/wYAAAAAAA0AAAD4/wcAAAAAAA0AAAD5//b/AAAAAA0AAAD5//f/AAAAAA0AAAD5//j/AAAAAA0AAAD5//n/AAACAA4AAAD5//r/AAAAAA0AAAD5//v/AAADAA0AAAD5//z/AAAAAA0AAAD5//3/AAAAAA0AAAD5//7/AAACAA4AAAD5////AAAAAA0AAAD5/wAAAAAAAA0AAAD5/wEAAAAAAA0AAAD5/wIAAAACAA4AAAD5/wMAAAAAAA0AAAD5/wQAAAADAA0AAAD5/wUAAAAAAA0AAAD5/wYAAAAAAA0AAAD5/wcAAAACAA4AAAD7//f/AAAAAAUAAAD7//j/AAAAAAUAAAD7//n/AAAAAAUAAAD7//r/AAAAAAUAAAD7//v/AAAAAAUAAAD8//v/AAAAAAUAAAD+//v/AAAAAAUAAAAAAPv/AAAAAAUAAAAAAP3/AAAAAAUAAAD+//3/AAAAAAUAAAD8//3/AAAAAAUAAAD7//3/AAAAAAUAAAD7//7/AAAAAAUAAAD7////AAAAAAUAAAD7/wAAAAAAAAUAAAD8/wAAAAAAAAUAAAD9/wAAAAAAAAUAAAD9/wEAAAAAAAUAAAD9/wIAAAAAAAUAAAD+/wIAAAAAAAUAAAD//wIAAAAAAAUAAAAAAAIAAAAAAAUAAAAAAAEAAAAAAAUAAAAAAAAAAAAAAAUAAAABAAAAAAAAAAUAAAACAAAAAAAAAAUAAAADAAAAAAAAAAUAAAAEAAAAAAAAAAUAAAAFAAAAAAAAAAUAAAAFAAEAAAAAAAUAAAAFAAIAAAAAAAUAAAAFAAQAAAAAAAUAAAAFAAUAAAAAAAUAAAAFAAYAAAAAAAUAAAD6//b/AAAAAA0AAAD6//f/AAAAAA0AAAD6//j/AAAAAA0AAAD6//n/AAAAAA0AAAD6//r/AAAAAA0AAAD6//v/AAAAAA0AAAD6//z/AAAAAA0AAAD6//3/AAAAAA0AAAD6//7/AAAAAA0AAAD6////AAAAAA0AAAD6/wAAAAAAAA0AAAD6/wEAAAAAAA0AAAD6/wIAAAAAAA0AAAD6/wMAAAAAAA0AAAD6/wQAAAAAAA0AAAD6/wUAAAAAAA0AAAD6/wYAAAAAAA0AAAD6/wcAAAAAAA0AAAD7/wQAAAACAA4AAAD7/wUAAAAAAA0AAAD7/wYAAAAAAA0AAAD8/wQAAAAAAA0AAAD8/wUAAAAAAA0AAAD8/wYAAAAAAA0AAAD9/wQAAAACAA4AAAD9/wUAAAACAA4AAAD9/wYAAAACAA4AAAD+/wQAAAAAAA0AAAD+/wUAAAADAA0AAAD+/wYAAAAAAA0AAAD//wQAAAAAAA0AAAD//wUAAAAAAA0AAAD//wYAAAAAAA0AAAAAAAQAAAAAAA0AAAAAAAUAAAACAA4AAAAAAAYAAAAAAA0AAAABAAQAAAAAAA0AAAABAAUAAAAAAA0AAAABAAYAAAAAAA0AAAACAAQAAAAAAA0AAAACAAUAAAAAAA0AAAACAAYAAAAAAA0AAAADAAQAAAAAAA0AAAADAAUAAAAAAA0AAAADAAYAAAAAAA0AAAAEAAQAAAAAAA0AAAAEAAUAAAAAAA0AAAAEAAYAAAAAAA0AAAD7/wcAAAAAAA0AAAD8/wcAAAADAA0AAAABAAEAAAAAAA0AAAABAAIAAAAAAA0AAAACAAEAAAAAAA0AAAACAAIAAAAAAA0AAAADAAEAAAAAAA0AAAADAAIAAAAAAA0AAAAEAAEAAAAAAA0AAAAEAAIAAAAAAA0AAAD7/wEAAAAAAA0AAAD7/wIAAAAAAA0AAAD8/wEAAAAAAA0AAAD8/wIAAAAAAA0AAAD8//b/AAAAAA0AAAD9//b/AAAAAA0AAAD+//f/AAAAAA0AAAD+//j/AAAAAA0AAAD///j/AAAAAA0AAAD///r/AAAAAA0AAAD8//f/AAAAAA0AAAD8//j/AAAAAA0AAAD8//n/AAAAAA0AAAD8//r/AAAAAA0AAAD9//j/AAAAAA0AAAD9//r/AAAAAA0AAAD+//b/AAAAAA0AAAD+//n/AAAAAA0AAAD+//r/AAAAAA0AAAD///b/AAACAA4AAAAAAPb/AAAAAA0AAAAAAPf/AAAAAA0AAAAAAPj/AAAAAA0AAAAAAPn/AAAAAA0AAAAAAPr/AAAAAA0AAAD7//z/AAAAAA0AAAD8//z/AAAAAA0AAAD9//z/AAAAAA0AAAD+//z/AAAAAA0AAAD///z/AAAAAA0AAAAAAPz/AAAAAA0AAAD8//7/AAAAAA0AAAD8////AAAAAA0AAAD9//7/AAAAAA0AAAD+//7/AAAAAA0AAAD+////AAAAAA0AAAD///7/AAAAAA0AAAAAAP7/AAAAAA0AAAAAAP//AAAAAA0AAAD+/wAAAAAAAA0AAAD+/wEAAAAAAA0AAAD//wAAAAAAAA0AAAD//wEAAAAAAA0AAAAGAAAAAAAAAA0AAAAGAAEAAAAAAA0AAAAGAAIAAAAAAA0AAAAHAAAAAAAAAA0AAAAHAAEAAAADAA0AAAAHAAIAAAAAAA0AAAAIAAAAAAAAAA0AAAAIAAEAAAAAAA0AAAAIAAIAAAAAAA0AAAAJAAAAAAACAA4AAAAJAAEAAAAAAA0AAAAJAAIAAAAAAA0AAAAKAAAAAAAAAA0AAAAKAAEAAAAAAA0AAAAKAAIAAAADAA0AAAALAAAAAAAAAA0AAAALAAEAAAAAAA0AAAALAAIAAAAAAA0AAAAMAAAAAAAAAA0AAAAMAAEAAAACAA4AAAAMAAIAAAAAAA0AAAANAAAAAAAAAA0AAAANAAEAAAAAAA0AAAANAAIAAAAAAA0AAAAGAAQAAAAAAA0AAAAGAAUAAAAAAA0AAAAGAAYAAAAAAA0AAAAHAAQAAAADAA0AAAAHAAUAAAAAAA0AAAAHAAYAAAAAAA0AAAAIAAQAAAAAAA0AAAAIAAUAAAAAAA0AAAAIAAYAAAAAAA0AAAAJAAQAAAACAA4AAAAJAAUAAAAAAA0AAAAJAAYAAAAAAA0AAAAKAAQAAAACAA4AAAAKAAUAAAAAAA0AAAAKAAYAAAADAA0AAAALAAQAAAAAAA0AAAALAAUAAAAAAA0AAAALAAYAAAAAAA0AAAAMAAQAAAAAAA0AAAAMAAUAAAAAAA0AAAAMAAYAAAAAAA0AAAANAAQAAAAAAA0AAAANAAUAAAAAAA0AAAANAAYAAAADAA0AAAAMAAMAAAAAAA0AAAANAAMAAAAAAA0AAAD1/wgAAAAAAA0AAAD2/wgAAAAAAA0AAAD3/wgAAAAAAA0AAAD4/wgAAAAAAA0AAAD5/wgAAAAAAA0AAAD6/wgAAAAAAA0AAAD7/wgAAAAAAA0AAAD8/wgAAAAAAA0AAAD9/wgAAAAAAA0AAAD+/wgAAAAAAA0AAAD//wgAAAAAAA0AAAAAAAgAAAAAAA0AAAABAAgAAAAAAA0AAAACAAgAAAAAAA0AAAADAAgAAAAAAA0AAAAEAAgAAAAAAA0AAAAFAAgAAAAAAAUAAAAGAAgAAAAAAA0AAAAHAAgAAAAAAA0AAAAIAAgAAAAAAA0AAAAJAAgAAAAAAA0AAAAKAAgAAAAAAA0AAAALAAgAAAAAAA0AAAAMAAgAAAAAAA0AAAANAAgAAAAAAA0AAAD7//b/AAAAAA0AAADs//X/AAAAAAQAAADt//X/AAABAAQAAADu//X/AAABAAQAAADv//X/AAABAAQAAADw//X/AAABAAQAAADx//X/AAABAAQAAADy//X/AAABAAQAAADz//X/AAABAAQAAAD0//X/AAABAAQAAAD1//X/AAABAAQAAAD2//X/AAABAAQAAAD3//X/AAABAAQAAAD4//X/AAABAAQAAAD5//X/AAABAAQAAAD6//X/AAABAAQAAAD7//X/AAABAAQAAAD8//X/AAABAAQAAAD8//T/AAAAAAQAAAD9//T/AAAAAAQAAAD+//T/AAAAAAQAAAD///T/AAAAAAQAAAAAAPT/AAAAAAQAAAABAPT/AAAAAAQAAAACAPT/AAAAAAQAAAADAPT/AAAAAAQAAAAEAPT/AAAAAAQAAAAFAPT/AAAAAAQAAAAGAPT/AAAAAAQAAAAHAPT/AAAAAAQAAAD7//T/AAAAAAQAAAD6//T/AAAAAAQAAAD5//T/AAAAAAQAAAD4//T/AAAAAAQAAAD3//T/AAAAAAQAAAD2//T/AAAAAAQAAAD1//T/AAAAAAQAAAD0//T/AAAAAAQAAADz//T/AAAAAAQAAADy//T/AAAAAAQAAADx//T/AAAAAAQAAADw//T/AAAAAAQAAADv//T/AAAAAAQAAADu//T/AAAAAAQAAADt//T/AAAAAAQAAADs//T/AAAAAAQAAAD///X/AAABAAQAAAAAAPX/AAABAAQAAAABAPX/AAABAAQAAAACAPX/AAABAAQAAAADAPX/AAABAAQAAAAEAPX/AAABAAQAAAAFAPX/AAABAAQAAAAGAPX/AAABAAQAAAAHAPX/AAABAAQAAAAIAPX/AAABAAQAAAAJAPX/AAABAAQAAAAKAPX/AAABAAQAAAALAPX/AAABAAQAAAAMAPX/AAABAAQAAAANAPX/AAABAAQAAAAOAPX/AAABAAQAAAAPAPX/AAABAAQAAAAQAPX/AAABAAQAAAARAPX/AAABAAQAAAASAPX/AAABAAQAAAATAPX/AAAAAAQAAAAIAPT/AAAAAAQAAAAJAPT/AAAAAAQAAAAKAPT/AAAAAAQAAAALAPT/AAAAAAQAAAAMAPT/AAAAAAQAAAANAPT/AAAAAAQAAAAOAPT/AAAAAAQAAAAPAPT/AAAAAAQAAAAQAPT/AAAAAAQAAAARAPT/AAAAAAQAAAASAPT/AAAAAAQAAAATAPT/AAAAAAQAAAATAPb/AAAAAAQAAAATAPf/AAAAAAQAAAATAPj/AAAAAAQAAAATAPn/AAAAAAQAAAATAPr/AAAAAAQAAAATAPv/AAAAAAQAAAATAPz/AAAAAAQAAAATAP3/AAAAAAQAAAATAP7/AAAAAAQAAAATAP//AAAAAAQAAAATAAAAAAAAAAQAAAASAAEAAAAAAA0AAAASAAIAAAAAAA0AAAASAAMAAAAAAA0AAAASAAQAAAAAAA0AAAASAAUAAAAAAA0AAAASAAYAAAAAAA0AAAASAAcAAAAAAA0AAAASAAgAAAAAAA0AAAATAAgAAAAAAAQAAAATAAcAAAAAAAQAAAATAAYAAAAAAAQAAAATAAUAAAAAAAQAAAATAAQAAAAAAAQAAAASAAAAAAAAAA0AAAATAAEAAAAAAAQAAAATAAIAAAAAAAQAAAATAAMAAAAAAAQAAAAFAAkAAAAAAAUAAADy/wkAAAAAAA0AAADz/wkAAAAAAA0AAAD0/wkAAAAAAA0AAAD1/wkAAAAAAA0AAAD2/wkAAAAAAA0AAAD3/wkAAAAAAA0AAAD4/wkAAAAAAA0AAAD5/wkAAAAAAA0AAAD6/wkAAAAAAA0AAAD7/wkAAAAAAA0AAAD8/wkAAAAAAA0AAAD9/wkAAAAAAA0AAAD+/wkAAAAAAA0AAAD//wkAAAAAAA0AAAAAAAkAAAAAAA0AAAABAAkAAAAAAA0AAAACAAkAAAAAAA0AAAADAAkAAAAAAA0AAAAEAAkAAAAAAA0AAAAGAAoAAAAAAAQAAAAHAAoAAAAAAAQAAAAIAAoAAAAAAAQAAAAHAAkAAAAAAA0AAAAGAAkAAAAAAA0AAAAIAAkAAAAAAA0AAAAJAAkAAAAAAA0AAAAKAAkAAAAAAA0AAAALAAkAAAAAAA0AAAAMAAkAAAAAAA0AAAANAAkAAAAAAA0AAAAOAAkAAAAAAA0AAAAPAAkAAAAAAA0AAAAQAAkAAAAAAA0AAAARAAkAAAAAAA0AAAASAAkAAAAAAA0AAAATAAkAAAAAAAQAAAATAAoAAAAAAAQAAAASAAoAAAAAAAQAAAATAAsAAAABAAQAAAASAAsAAAABAAQAAAARAAsAAAABAAQAAAAQAAsAAAABAAQAAAAPAAsAAAABAAQAAAAOAAsAAAABAAQAAAANAAsAAAABAAQAAAAMAAsAAAABAAQAAAALAAsAAAABAAQAAAAKAAsAAAABAAQAAAAJAAsAAAABAAQAAAAIAAsAAAABAAQAAAAHAAsAAAABAAQAAAAGAAsAAAABAAQAAAAFAAsAAAABAAQAAAAEAAsAAAABAAQAAAADAAsAAAABAAQAAAACAAsAAAABAAQAAAABAAsAAAABAAQAAAAAAAsAAAABAAQAAAD//wsAAAABAAQAAAD+/wsAAAABAAQAAAD9/wsAAAABAAQAAAD8/wsAAAABAAQAAAD7/wsAAAABAAQAAAD6/wsAAAABAAQAAAD5/wsAAAABAAQAAAD4/wsAAAABAAQAAAD3/wsAAAABAAQAAAD2/wsAAAABAAQAAAD1/wsAAAABAAQAAAD0/wsAAAABAAQAAADz/wsAAAABAAQAAADz/woAAAAAAAQAAADy/woAAAAAAAQAAAD0/woAAAAAAAQAAAD1/woAAAAAAAQAAAD2/woAAAAAAAQAAAD3/woAAAAAAAQAAAD4/woAAAAAAAQAAAD5/woAAAAAAAQAAAD6/woAAAAAAAQAAAAKAAoAAAAAAAQAAAALAAoAAAAAAAQAAAAMAAoAAAAAAAQAAAANAAoAAAAAAAQAAAAOAAoAAAAAAAQAAAAPAAoAAAAAAAQAAAAQAAoAAAAAAAQAAAARAAoAAAAAAAQAAAAJAAoAAAAAAAQAAAAPAPb/AAAAAA0AAAAPAPf/AAAAAA0AAAAPAPj/AAAAAA0AAAAOAPj/AAAAAA0AAAAOAPn/AAAAAA0AAAAOAPr/AAAAAA0AAAAOAPv/AAAAAA0AAAAOAPz/AAAAAA0AAAAOAP3/AAAAAA0AAAAOAP7/AAAAAA0AAAAOAP//AAAAAA0AAAAOAAAAAAAAAA0AAAAOAAEAAAAAAA0AAAAOAAIAAAAAAA0AAAAOAAMAAAAAAA0AAAAOAAQAAAAAAA0AAAAOAAUAAAAAAA0AAAAOAAYAAAAAAA0AAAAPAAYAAAAAAA0AAAAPAAcAAAAAAA0AAAAOAAcAAAAAAA0AAAAOAAgAAAAAAA0AAAAOAPf/AAAAAA0AAAAOAPb/AAAAAA0AAAAQAPb/AAAAAA0AAAARAPb/AAAAAA0AAAASAPb/AAAAAA0AAAASAPf/AAAAAA0AAAARAPf/AAAAAA0AAAAQAPf/AAAAAA0AAAAQAPj/AAAAAA0AAAARAPj/AAAAAA0AAAASAPj/AAAAAA0AAAASAPn/AAAAAA0AAAASAPr/AAAAAA0AAAASAPv/AAAAAA0AAAASAPz/AAAAAA0AAAASAP3/AAAAAA0AAAASAP7/AAAAAA0AAAASAP//AAAAAA0AAAARAAMAAAAAAA0AAAARAAQAAAAAAA0AAAARAAUAAAAAAA0AAAARAAYAAAAAAA0AAAARAAcAAAAAAA0AAAARAAgAAAAAAA0AAAAQAAgAAAAAAA0AAAAPAAgAAAAAAA0AAAAPAAUAAAAAAA0AAAAPAAQAAAAAAA0AAAAPAAMAAAAAAA0AAAAPAAIAAAAAAA0AAAAPAAEAAAAAAA0AAAAPAAAAAAAAAA0AAAAPAP//AAAAAA0AAAAPAPr/AAAAAA0AAAAPAPn/AAAAAA0AAAAPAPv/AAAAAA0AAAAPAPz/AAAAAA0AAAAPAP3/AAAAAA0AAAAPAP7/AAAAAA0AAAAQAAcAAAAAAA0AAAAQAAYAAAAAAA0AAAAQAAUAAAAAAA0AAAAQAAQAAAAAAA0AAAAQAAMAAAAAAA0AAAAQAAIAAAAAAA0AAAAQAAEAAAAAAA0AAAAQAAAAAAAAAA0AAAAQAP//AAAAAA0AAAAQAP7/AAAAAA0AAAAQAP3/AAAAAA0AAAAQAPz/AAAAAA0AAAAQAPv/AAAAAA0AAAAQAPr/AAAAAA0AAAAQAPn/AAAAAA0AAAARAPn/AAAAAA0AAAARAPr/AAAAAA0AAAARAPv/AAAAAA0AAAARAPz/AAAAAA0AAAARAP3/AAAAAA0AAAARAP7/AAAAAA0AAAARAP//AAAAAA0AAAARAAAAAAAAAA0AAAARAAEAAAAAAA0AAAARAAIAAAAAAA0AAAD+//X/AAABAAQAAAD9//X/AAABAAQAAADs//b/AAAAAAQAAADs//f/AAAAAAQAAADs//v/AAAAAAQAAADs//j/AAAAAAQAAADs//n/AAAAAAQAAADs//r/AAAAAAQAAADs//z/AAAAAAQAAADs//3/AAAAAAQAAADs//7/AAAAAAQAAADs////AAAAAAQAAADs/wAAAAAAAAQAAADs/wEAAAAAAAQAAADs/wIAAAAAAAQAAADs/wMAAAAAAAQAAADs/wQAAAAAAAQAAADs/wUAAAAAAAQAAADs/wYAAAAAAAQAAADs/wcAAAAAAAQAAADs/wgAAAAAAAQAAADs/wkAAAAAAAQAAADs/woAAAAAAAQAAADt/woAAAAAAAQAAADu/woAAAAAAAQAAADs/wsAAAABAAQAAADt/wsAAAABAAQAAADu/wsAAAABAAQAAADv/wsAAAABAAQAAADw/wsAAAABAAQAAADx/wsAAAABAAQAAADy/wsAAAABAAQAAADx/woAAAAAAAQAAADw/woAAAAAAAQAAADv/woAAAAAAAQAAADu/wkAAAAAAA0AAADt/wkAAAAAAA0AAADt/wgAAAAAAA0AAADt/wcAAAAAAA0AAADt/wYAAAAAAA0AAADt/wUAAAAAAA0AAADt/wQAAAAAAA0AAADt/wMAAAAAAA0AAADt/wIAAAAAAA0AAADt/wEAAAAAAA0AAADt/wAAAAAAAA0AAADt////AAAAAA0AAADt//7/AAAAAA0AAADt//3/AAAAAA0AAADt//b/AAAAAA0AAADt//f/AAAAAA0AAADt//j/AAAAAA0AAADt//n/AAAAAA0AAADt//r/AAAAAA0AAADt//v/AAAAAA0AAADt//z/AAAAAA0AAADu//b/AAAAAA0AAADv//b/AAAAAA0AAADw//b/AAAAAA0AAADx//b/AAAAAA0AAAD0//b/AAAAAA0AAAD0//f/AAAAAA0AAAD0//j/AAAAAA0AAADz//b/AAAAAA0AAADy//b/AAAAAA0AAADx//f/AAAAAA0AAADu//f/AAAAAA0AAADu//r/AAAAAA0AAADu//v/AAAAAA0AAADu//z/AAAAAA0AAADu//3/AAAAAA0AAADu//7/AAAAAA0AAADu////AAAAAA0AAADu/wAAAAAAAA0AAADu/wEAAAAAAA0AAADu/wIAAAAAAA0AAADv/wIAAAAAAA0AAADv/wMAAAAAAA0AAADv/wQAAAAAAA0AAADv/wUAAAAAAA0AAADv/wYAAAAAAA0AAADv/wcAAAAAAA0AAADv/wgAAAAAAA0AAADv/wkAAAAAAA0AAADw/wkAAAAAAA0AAADx/wkAAAAAAA0AAADu/wgAAAAAAA0AAADu/wcAAAAAAA0AAADu/wYAAAAAAA0AAADu/wUAAAAAAA0AAADu/wQAAAAAAA0AAADu/wMAAAAAAA0AAADw/wQAAAAAAA0AAADx/wQAAAAAAA0AAADy/wQAAAAAAA0AAADz/wQAAAAAAA0AAAD0/wQAAAAAAA0AAAD0/wUAAAAAAA0AAAD0/wYAAAAAAA0AAADz/wYAAAAAAA0AAADz/wcAAAAAAA0AAADy/wcAAAAAAA0AAADy/wgAAAAAAA0AAADx/wgAAAAAAA0AAADw/wgAAAAAAA0AAADw/wcAAAAAAA0AAADw/wYAAAAAAA0AAADw/wUAAAAAAA0AAADx/wUAAAAAAA0AAADy/wUAAAAAAA0AAAD0/wcAAAAAAA0AAAD0/wgAAAAAAA0AAADz/wgAAAAAAA0AAADx/wcAAAAAAA0AAADx/wYAAAAAAA0AAADy/wYAAAAAAA0AAADz/wUAAAAAAA0AAADz/wMAAAAAAA0AAADz/wIAAAAAAA0AAAD0/wIAAAAAAA0AAAD0/wEAAAAAAA0AAAD0/wAAAAAAAA0AAAD0////AAAAAA0AAAD0//7/AAAAAA0AAAD0//3/AAAAAA0AAAD0//z/AAAAAA0AAAD0//v/AAAAAA0AAAD0//r/AAAAAA0AAAD0//n/AAAAAA0AAADz//f/AAAAAA0AAADy//f/AAAAAA0AAADw//f/AAAAAA0AAADv//f/AAAAAA0AAADu//j/AAAAAA0AAADu//n/AAAAAA0AAADv/wAAAAAAAA0AAADv/wEAAAAAAA0AAADw/wMAAAAAAA0AAADx/wMAAAAAAA0AAADy/wMAAAAAAA0AAADy/wIAAAAAAA0AAAD0/wMAAAAAAA0AAADx/wIAAAAAAA0AAADx/wEAAAAAAA0AAADx/wAAAAAAAA0AAADx////AAAAAA0AAADx//7/AAAAAA0AAADw//7/AAAAAA0AAADw//3/AAAAAA0AAADw//z/AAAAAA0AAADw//v/AAAAAA0AAADw//r/AAAAAA0AAADv//r/AAAAAA0AAADv//n/AAAAAA0AAADv//j/AAAAAA0AAADv//v/AAAAAA0AAADv//z/AAAAAA0AAADv//3/AAAAAA0AAADv//7/AAAAAA0AAADv////AAAAAA0AAADw/wAAAAAAAA0AAADw/wEAAAAAAA0AAADw/wIAAAAAAA0AAADw////AAAAAA0AAADw//n/AAAAAA0AAADw//j/AAAAAA0AAADx//j/AAAAAA0AAADx//n/AAAAAA0AAADx//r/AAAAAA0AAADx//v/AAAAAA0AAADx//z/AAAAAA0AAADx//3/AAAAAA0AAADy////AAAAAA0AAADy/wAAAAAAAA0AAADy//7/AAAAAA0AAADy//3/AAAAAA0AAADz//z/AAAAAA0AAADz//v/AAAAAA0AAADz//r/AAAAAA0AAADy//n/AAAAAA0AAADy//j/AAAAAA0AAADy//r/AAAAAA0AAADy//v/AAAAAA0AAADy//z/AAAAAA0AAADz/wAAAAAAAA0AAADz/wEAAAAAAA0AAADz////AAAAAA0AAADz//7/AAAAAA0AAADz//3/AAAAAA0AAADz//n/AAAAAA0AAADz//j/AAAAAA0AAADy/wEAAAAAAA0AAAD7/woAAAAAAAQAAAD8/woAAAAAAAQAAAD9/woAAAAAAAQAAAD+/woAAAAAAAQAAAD//woAAAAAAAQAAAAAAAoAAAAAAAQAAAABAAoAAAAAAAQAAAACAAoAAAAAAAQAAAADAAoAAAAAAAQAAAAEAAoAAAAAAAQAAAAFAAoAAAAAAAQAAAA=")
tile_set = SubResource("TileSet_w7e0w")
script = ExtResource("4_5uoc8")
metadata/_edit_lock_ = true

[node name="Details_map" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAABAPb/AAAAABIAAAAGAPb/AAAGABEAAAAKAPv/AAAAABIAAAANAPf/AAAGABEAAAD1//j/AAAGABEAAAD2////AAAAABIAAAD7//b/AAADABAAAAD7/wUAAAABABIAAAAMAAIAAAAAABIAAAALAAYAAAAAABIAAAAFAAkAAAADABAAAAD3/wgAAAABABQAAAD3/wQAAAABABQAAAAIAAUAAAABABQAAAAOAAEAAAABABQAAAANAP3/AAABABQAAAAEAPj/AAABABQAAAD1//r/AAABABQAAAD0//3/AAABABQAAADz/wAAAAABABQAAADx/wIAAAABABQAAADw//7/AAABABQAAAARAAYAAAABABQAAADx/wYAAAABABYAAADt/wMAAAABABYAAADw//z/AAABABYAAAALAPr/AAABABYAAAAQAPv/AAABABYAAAAQAPz/AAABABYAAAANAAYAAAABABYAAAD0/wgAAAAHABMAAADv/wEAAAAHABMAAAD3//z/AAAHABMAAAACAPn/AAAHABMAAAARAP//AAAHABMAAADu/wcAAAAHABMAAADv/wgAAAABABIAAADu//3/AAABABIAAAAQAAIAAAABABIAAAANAAkAAAAEABEAAAD7/wkAAAAEABEAAADu/wMAAAAEABEAAADx//n/AAAEABEAAAD3//b/AAAEABEAAAAOAPj/AAAEABEAAADx/wgAAAAGAAsAAADu/wUAAAAGAAsAAADt/wAAAAAGAAsAAAAIAP//AAAGAAsAAAAQAAgAAAAGAAsAAAD1/wkAAAAGAAoAAADy/wMAAAAGAAoAAADy//3/AAAGAAoAAAAOAPz/AAAGAAoAAAARAPv/AAAGAAoAAAAAAAgAAAAGAAoAAAD4/wgAAAAFAAcAAADy/wYAAAAFAAcAAADw/wUAAAAFAAcAAADx/wUAAAAFAAcAAADw/wAAAAAFAAcAAADu////AAAFAAcAAADv//7/AAAFAAcAAADz//r/AAAFAAcAAADx//r/AAAFAAcAAAAPAAUAAAAFAAcAAAAOAAcAAAAFAAcAAAALAAgAAAAFAAcAAAACAAkAAAAFAAcAAAD+/wkAAAAFAAcAAAALAPz/AAAFAAcAAAAOAPr/AAAFAAcAAAAQAPj/AAAFAAcAAAARAPf/AAAFAAcAAAAAAPf/AAAFAAcAAAD9//f/AAAFAAcAAAD2/wIAAAAFAAcAAAD1/wIAAAAFAAcAAAACAAUAAAAFAAcAAAAPAP//AAAGAAcAAAAQAP7/AAAGAAcAAAARAAEAAAAGAAcAAAD1/wYAAAAGAAcAAAD0/wUAAAAGAAcAAAD8/wMAAAAGAAkAAADz//7/AAAGAAkAAAARAAQAAAAGAAkAAAAMAP3/AAAGAAkAAAAEAPb/AAAGAAkAAAD5//r/AAAGAAkAAAAHAPj/AAAGAAkAAAAHAPv/AAAGAAkAAAA=")
tile_set = SubResource("TileSet_w7e0w")
metadata/_edit_lock_ = true

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_e6ewd")

[node name="Towers" type="Node2D" parent="."]
script = ExtResource("4_4eu5u")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(176, 304)
shape = SubResource("RectangleShape2D_5q8qw")

[node name="EnemySpawner" type="Node2D" parent="." node_paths=PackedStringArray("path2D_node", "slime_target")]
script = ExtResource("7_pm7op")
path2D_node = NodePath("../EnemyPath")
slime_target = NodePath("../Slimes")
slime_view_scene = ExtResource("9_v7guq")

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
one_shot = true

[node name="PathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathArea"]
position = Vector2(-144, -224)
shape = SubResource("RectangleShape2D_tegvk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PathArea"]
position = Vector2(176, 144)
shape = SubResource("RectangleShape2D_6rlus")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PathArea"]
position = Vector2(96, 16)
shape = SubResource("RectangleShape2D_j2x5b")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PathArea"]
position = Vector2(16, 48)
shape = SubResource("RectangleShape2D_ybqqw")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="PathArea"]
position = Vector2(-32, 80)
shape = SubResource("RectangleShape2D_wqtj7")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="PathArea"]
position = Vector2(-80, 48)
shape = SubResource("RectangleShape2D_bsyee")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="PathArea"]
position = Vector2(-112, 16)
shape = SubResource("RectangleShape2D_0yngv")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="PathArea"]
position = Vector2(-144, -32)
shape = SubResource("RectangleShape2D_p3hwx")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="PathArea"]
position = Vector2(16, -80)
shape = SubResource("RectangleShape2D_0ot3i")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="PathArea"]
position = Vector2(16, -144)
shape = SubResource("RectangleShape2D_4ph86")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="PathArea"]
position = Vector2(176, -112)
shape = SubResource("RectangleShape2D_xw783")

[connection signal="pressed" from="NextWave" to="EnemySpawner" method="_on_next_wave_pressed"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
